populaire-jaune: flex-direction colonne

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -769,6 +769,7 @@ h2 {
     }
 
     .populaire-jaune {
+        flex-direction:column;
         align-items: center;
         gap: 30px;
         margin: 2.5%;
