--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 ﻿html {
-    /* background: blue; */
+     background: blue; 
 }
 
 body {
@@ -8,7 +8,7 @@ body {
     max-width: 1400px;
     width: 100%;
     margin: auto;
-    padding: 0px;
+    padding: 3px;
     background-color: white;
 }
 
