rajouté la propriété color:black  dans le lien afficher plus

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -327,6 +327,7 @@ input {
 
 #next a {
     text-decoration: none;
+    color: black;
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
