--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,7 +43,7 @@ body {
     text-align: center;
     background-color: #0065FC;
     color: white;
-    border-radius: 0px 10px 10px 0px;
+    border-radius: 0px 15px 15px 0px;
     width: 132px;
 }
 
@@ -56,10 +56,10 @@ body {
 
 .filtre {
     display: flex;
+    flex-direction: row;
     justify-content: start;
     margin-bottom: 10px;
-    width: 70%;
-    gap: 25px;
+    width: 50%;
 }
 
 #info {
@@ -79,6 +79,7 @@ body {
     width: 100%;
 }
 
+/*
 p {
     font-style: normal;
     font-weight: 400;
@@ -86,7 +87,7 @@ p {
     line-height: 16px;
     margin-bottom: 12px;
     margin-top: 5px;
-}
+}*/
 
 
 /*partie navigation*/
@@ -114,25 +115,22 @@ nav {
     .menu a {
         text-decoration: none;
         color: black;
+        padding-top: 20px;
+        width: 120px;
     }
 
         .menu a:hover {
             border-top: 2px solid #0065FC;
             font-weight: 500;
             color: #0065FC;
-            padding-bottom: 2px;
-            body
-
-{
-    padding-bottom: 2px;
-}
-
-}
+            padding-top: 18px;
+        }
 
 .liens-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    margin-left: 29px;
+    gap: 30px;
 }
 
     .liens-container a {
@@ -152,45 +150,109 @@ nav {
     line-height: 21px;
     text-align: left;
     color: #000000;
-    margin-right: 40px;
+    margin-right: 12px;
     width: 5%;
     margin-left: 10px;
 }
 
-.groupe-lien {
+/*.groupe-lien {
     display: flex;
     flex-direction: row;
     width: 90%;
     gap: 30px;
-}
+}*/
 
-.lien {
+.lien1 {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    border: 2px solid #E6E6E6;
+    /*border: 2px solid #E6E6E6;*/
     border-radius: 20px 20px 20px 20px;
     color: blue;
-    width: auto;
+    /* width: auto;*/
     height: 48px;
     border: 1px solid #D9D9D9;
     padding-left: 21px;
-    padding-right: 25px;
+    padding-right: 20px;
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
     line-height: 20px;
+    margin-right: 10px;
+    /* width:107px;*/
 }
 
-.lien-dog {
-    width: 242px;
+.lien2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    /*border: 2px solid #E6E6E6;*/
+    border-radius: 20px 20px 20px 20px;
+    color: blue;
+    /* width: auto;*/
+    height: 48px;
+    border: 1px solid #D9D9D9;
+    padding-left: 21px;
+    padding-right: 20px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 20px;
+    margin-right: 10px;
+    /* width:107px;*/
 }
 
-    .lien:hover,
-    .lien-dog:hover {
-        background-color: #DEEBFF;
-    }
+.lien3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    /*border: 2px solid #E6E6E6;*/
+    border-radius: 20px 20px 20px 20px;
+    color: blue;
+    /* width: auto;*/
+    height: 48px;
+    border: 1px solid #D9D9D9;
+    padding-left: 21px;
+    padding-right: 20px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 20px;
+    margin-right: 10px;
+    /* width:107px;*/
+}
+
+.lien4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    /*border: 2px solid #E6E6E6;*/
+    border-radius: 20px 20px 20px 20px;
+    color: blue;
+    /* width: auto;*/
+    height: 48px;
+    border: 1px solid #D9D9D9;
+    padding-left: 21px;
+    padding-right: 20px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 20px;
+    width: 182px;
+}
+
+/*.lien-dog {
+    width: 178px;
+}*/
+
+.lien:hover,
+.lien-dog:hover {
+    background-color: #DEEBFF;
+}
 
 
 /*partie formulaire*/
@@ -223,11 +285,12 @@ input {
     font-weight: 700;
     font-size: 22px;
     line-height: 26px;
-    margin-top: 20px;
+    margin-top: 36px;
+    margin-bottom: 7px;
     margin-left: 18px;
 }
 
-.star-populaire {
+/*.star-populaire {
     display: flex;
     flex-direction: row;
     margin-top: 60px;
@@ -239,23 +302,67 @@ input {
     flex-direction: row;
     margin-top: 40px;
     padding-bottom: 10px;
-}
+}*/
 
-.star-logement {
-    display: flex;
-    flex-direction: row;
-}
+
+
 
 .fa-chart-line {
     padding-right: 20px;
 }
 
-.nom {
+.hebergement-jaune .card-hebergement .card-container .nom {
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 19px;
-    margin: 5px 18px 2px 4px;
+    margin: 0px 18px 5px 2px;
+}
+
+.hebergement-jaune .card-hebergement .card-container .prix {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    margin: 0px 18px 5px 2px;
+}
+
+.hebergement-jaune .card-hebergement .card-container .star-logement {
+    display: flex;
+    flex-direction: row;
+    margin: 8px 18px 0px 2px;
+}
+
+.populaire-jaune .card-populaire .card-container .nom {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    margin: 13px 18px 5px 2px;
+    color: black;
+}
+
+.populaire-jaune .card-populaire .card-container .prix {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    margin: 0px 18px 37px 2px;
+    color: black;
+}
+
+.populaire-jaune .card-populaire .card-container .star-populaire {
+    display: flex;
+    flex-direction: row;
+    margin: 6px 18px 0px 2px;
+}
+
+.populaire-jaune .card-populaire .card-container .star-populaire-blanc {
+    display: flex;
+    flex-direction: row;
+    margin: 26px 18px 0px 2px;
 }
 
 .nom-footer {
@@ -263,6 +370,15 @@ input {
     font-weight: 700;
     font-size: 18px;
     line-height: 21px;
+}
+
+.activite .images-activite .card-activite .nom {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    margin: 0px 0px 5px 12px;
+    color: black;
 }
 
 
@@ -281,9 +397,10 @@ input {
     display: flex;
     flex-direction: column;
     width: 67%;
-    height: 590px;
+    height: 650px;
     border-radius: 15px;
     background: #F2F2F2;
+    margin-top: 10px;
 }
 
 .hebergement-rouge {
@@ -315,7 +432,7 @@ input {
     align-items: center;
     border-radius: 15px;
     width: 32%;
-    height: 590px;
+    height: 650px;
     background: #F2F2F2;
 }
 
@@ -325,52 +442,55 @@ input {
     width: 94%;
 }
 
-#next a {
-    text-decoration: none;
-    color: black;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 21px;
-    margin-left: 23px;
+#next {
+    margin-top: 0px;
 }
+
+    #next a {
+        text-decoration: none;
+        color: black;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 21px;
+        margin-left: 48px;
+    }
 
 .card-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     font-weight: normal;
-    margin-left: 10px;
+    margin-left: 14px;
     color: black;
 }
 
 .card-hebergement {
-    box-shadow: 20px 20px 50px 15px grey;
-    transition: 0.2s;
     width: 30%;
     height: 200px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     border-radius: 15px 15px 15px 15px;
+    background-color: white;
 }
 
 .card-populaire {
     display: flex;
     flex-direction: row;
     justify-content: start;
-    box-shadow: 20px 20px 50px 15px grey;
-    transition: 0.2s;
     width: 98%;
     border-radius: 15px 15px 15px 15px;
-    margin: 2%
+    /*margin: 2%;*/
+    margin: 15px 5px 15px 5px;
+    background-color: white;
 }
 
-.card-hebergement:hover {
+
+/*.card-hebergement:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
 }
 
 .card-populaire:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
-}
+}*/
 
 .Img-hebergement {
     object-fit: cover;
@@ -386,7 +506,7 @@ input {
     width: 127px;
     height: 131px;
     margin-top: 3px;
-    border: solid 5px white;
+    border: solid 2px white;
 }
 
 .populaires {
@@ -501,19 +621,16 @@ footer {
 .fas {
     font-weight: 900;
     width: 1px;
-    margin-right: 25px;
+    margin-right: 15px;
 }
 
-.fa-info {
-   
-}
 
 .fa-star {
     color: blue;
 }
 
 .fa-grey {
-    color: lightgray;
+    color: #F2F2F2;
 }
 
 .fa-blue {
@@ -525,13 +642,13 @@ footer {
 }
 
 i.fa-solid.fa-info.fa-blue {
-    width: 29px;
+    width: 28px;
     height: 15px;
     border: solid 1px #D9D9D9;
     text-align: center;
-    padding-top: 12px;
-    border-radius: 15px 15px 15px 15px;
-    margin-right: 10px;
+    padding-top: 13px;
+    border-radius: 15px 17px 15px 14px;
+    margin-right: 12px;
 }
 
 h5 {
@@ -576,17 +693,105 @@ h1 {
         gap: 30%;
     }
 
-    .lien {
+    .filtre {
+        width: 80%;
+    }
+
+    /* .lien {
         width: 60%;
+    }*/
+
+    .lien1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        /*border: 2px solid #E6E6E6;*/
+        border-radius: 20px 20px 20px 20px;
+        color: blue;
+        /* width: auto;*/
+        height: 48px;
+        border: 1px solid #D9D9D9;
+        padding-left: 21px;
+        padding-right: 20px;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 17px;
+        line-height: 20px;
+        margin-right: 10px;
+        /* width:107px;*/
+    }
+
+    .lien2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        /*border: 2px solid #E6E6E6;*/
+        border-radius: 20px 20px 20px 20px;
+        color: blue;
+        /* width: auto;*/
+        height: 48px;
+        border: 1px solid #D9D9D9;
+        padding-left: 21px;
+        padding-right: 20px;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 17px;
+        line-height: 20px;
+        margin-right: 10px;
+        /* width:107px;*/
+    }
+
+    .lien3 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        /*border: 2px solid #E6E6E6;*/
+        border-radius: 20px 20px 20px 20px;
+        color: blue;
+        /* width: auto;*/
+        height: 48px;
+        border: 1px solid #D9D9D9;
+        padding-left: 21px;
+        padding-right: 20px;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 17px;
+        line-height: 20px;
+        margin-right: 10px;
+        /* width:107px;*/
+    }
+
+    .lien4 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        /*border: 2px solid #E6E6E6;*/
+        border-radius: 20px 20px 20px 20px;
+        color: blue;
+        /* width: auto;*/
+        height: 48px;
+        border: 1px solid #D9D9D9;
+        padding-left: 21px;
+        padding-right: 20px;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 17px;
+        line-height: 20px;
+        width: 177px;
     }
 
     .liens-container {
-        width: 60%;
+        margin-left: 20px;
     }
 
     .groupe-lien {
         width: 55%;
     }
+
 
     #lien-filtre {
         justify-content: start;
@@ -613,6 +818,7 @@ h1 {
     .hebergement-bleu {
         width: 100%;
         height: 625px;
+        padding-bottom:50px;
     }
 
     .hebergement-jaune {
@@ -633,6 +839,7 @@ h1 {
         gap: 12px;
         width: 100%;
         margin-right: 13px;
+        padding-bottom:30px;
     }
 
     .Img-populaire {
@@ -653,7 +860,13 @@ h1 {
         width: 93%;
     }
 
-    .star-populaire {
+    .populaire-jaune .card-populaire .card-container .star-populaire-blanc {
+        display: flex;
+        flex-direction: row;
+        margin-top: 8px;
+    }
+
+    /*.star-populaire {
         margin-top: 35px;
     }
 
@@ -663,7 +876,7 @@ h1 {
 
     .star-populaire-blanc {
         margin-top: 52px;
-    }
+    }*/
 
     .images-activite .card-activite img {
         height: 227px;
@@ -675,6 +888,7 @@ h1 {
 
     #next a {
         margin-left: 20px;
+
     }
 }
 
