--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 ﻿
 
 
-body {
+body, html {
     box-sizing: border-box;
     font-family: 'raleway', sans-serif;
     max-width: 1400px;
@@ -11,8 +11,26 @@ body {
     background-color: white;
 }
 
-#header {
-    width: 95%;
+/*#header {
+    width: 90%;
+    margin: 5px;
+}*/
+
+h5 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: start;
+    margin-top: 10px;
+}
+
+h1 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    margin-top: 50px;
 }
 
 #fname {
@@ -136,6 +154,7 @@ nav {
     .liens-container a {
         text-decoration: none;
         color: black;
+        margin-left: 5px;
     }
 
 #lien-filtre {
@@ -162,7 +181,7 @@ nav {
     gap: 30px;
 }*/
 
-.lien1 {
+.lien1, .lien2, .lien3 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -183,16 +202,16 @@ nav {
     /* width:107px;*/
 }
 
-.lien2 {
+/*.lien2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    /*border: 2px solid #E6E6E6;*/
-    border-radius: 20px 20px 20px 20px;
-    color: blue;
-    /* width: auto;*/
-    height: 48px;
+    gap: 10px;*/
+/*border: 2px solid #E6E6E6;*/
+/*border-radius: 20px 20px 20px 20px;
+    color: blue;*/
+/* width: auto;*/
+/*height: 48px;
     border: 1px solid #D9D9D9;
     padding-left: 21px;
     padding-right: 20px;
@@ -200,20 +219,20 @@ nav {
     font-weight: 700;
     font-size: 17px;
     line-height: 20px;
-    margin-right: 10px;
-    /* width:107px;*/
-}
+    margin-right: 10px;*/
+/* width:107px;*/
+/*}
 
 .lien3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    /*border: 2px solid #E6E6E6;*/
-    border-radius: 20px 20px 20px 20px;
-    color: blue;
-    /* width: auto;*/
-    height: 48px;
+    gap: 10px;*/
+/*border: 2px solid #E6E6E6;*/
+/*border-radius: 20px 20px 20px 20px;
+    color: blue;*/
+/* width: auto;*/
+/*height: 48px;
     border: 1px solid #D9D9D9;
     padding-left: 21px;
     padding-right: 20px;
@@ -221,19 +240,19 @@ nav {
     font-weight: 700;
     font-size: 17px;
     line-height: 20px;
-    margin-right: 10px;
-    /* width:107px;*/
-}
+    margin-right: 10px;*/
+/* width:107px;*/
+/*}*/
 
 .lien4 {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    /*border: 2px solid #E6E6E6;*/
+    border: 2px solid #E6E6E6;
     border-radius: 20px 20px 20px 20px;
     color: blue;
-    /* width: auto;*/
+    width: auto;
     height: 48px;
     border: 1px solid #D9D9D9;
     padding-left: 21px;
@@ -249,11 +268,14 @@ nav {
     width: 178px;
 }*/
 
-.lien:hover,
+/*.lien:hover,
 .lien-dog:hover {
     background-color: #DEEBFF;
-}
+}*/
 
+.lien1:hover, .lien2:hover, .lien3:hover, .lien4:hover {
+    background-color: #DEEBFF;
+}
 
 /*partie formulaire*/
 
@@ -309,6 +331,12 @@ input {
 
 .fa-chart-line {
     padding-right: 20px;
+    margin-top: 30px;
+}
+
+.euro {
+    font-weight: bold;
+    color: black;
 }
 
 .hebergement-jaune .card-hebergement .card-container .nom {
@@ -379,6 +407,15 @@ input {
     line-height: 19px;
     margin: 0px 0px 5px 12px;
     color: black;
+}
+
+.main a {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    margin-top: 10px;
 }
 
 
@@ -453,7 +490,7 @@ input {
         font-weight: 700;
         font-size: 18px;
         line-height: 21px;
-        margin-left: 48px;
+        margin-left: 24px;
     }
 
 .card-container {
@@ -514,6 +551,10 @@ input {
     height: 625px;
 }
 
+.card-activite {
+    width: 20%;
+}
+
 .activite {
     display: flex;
     flex-direction: column;
@@ -535,9 +576,7 @@ input {
         height: 388px;
     }
 
-.card-activite {
-    width: 20%;
-}
+
 
 
 /*partie footer*/
@@ -545,7 +584,7 @@ input {
 footer {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 95%;
     padding-bottom: 10px;
     background-color: #E6E6E6;
     justify-content: space-around;
@@ -574,14 +613,6 @@ footer {
         margin-top: 10px;
     }
 
-.main a {
-    text-decoration: none;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    margin-top: 10px;
-}
 
 .hebergement {
     display: flex;
@@ -617,6 +648,8 @@ footer {
         margin-top: 10px;
     }
 
+/*partie icones*/
+
 .fa-solid,
 .fas {
     font-weight: 900;
@@ -651,23 +684,6 @@ i.fa-solid.fa-info.fa-blue {
     margin-right: 12px;
 }
 
-h5 {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: start;
-    margin-top: 10px;
-}
-
-h1 {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 26px;
-    margin-top: 50px;
-}
-
 #loca-icone {
     border: none;
     border-radius: 10px 0px 0px 10px;
@@ -684,7 +700,7 @@ h1 {
 @media screen and (max-width: 991px) {
 
     body {
-        padding-top: 20px;
+        margin: 5px;
     }
 
     nav {
@@ -693,13 +709,27 @@ h1 {
         gap: 30%;
     }
 
+    footer {
+        width: 96%;
+        margin-left: 14px;
+    }
+
     .filtre {
-        width: 80%;
+        margin-bottom: 0px;
     }
 
     /* .lien {
         width: 60%;
     }*/
+
+    .populaire-jaune .card-populaire .card-container .nom {
+        /* font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 19px;*/
+        margin: 13px 14px 11px -6px;
+        /* color: black;*/
+    }
 
     .lien1 {
         display: flex;
@@ -816,34 +846,41 @@ h1 {
     }
 
     .hebergement-bleu {
-        width: 100%;
+        width: 97%;
         height: 625px;
-        padding-bottom:50px;
+        padding-bottom: 50px;
     }
 
     .hebergement-jaune {
         margin-bottom: 10px;
     }
 
+    .main a {
+        /* text-decoration: none;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;*/
+        margin-top: 10px;
+        width: 35%;
+    }
+
     .populaire-rouge {
-        width: 100%;
+        width: 97%;
         margin-top: 25px;
-        height: auto;
-        justify-content: space-around;
+        height: 300px;
     }
 
     .populaire-jaune {
+        display: flex;
         flex-direction: row;
-        margin-top: 0px;
-        justify-content: space-around;
-        gap: 12px;
-        width: 100%;
-        margin-right: 13px;
-        padding-bottom:30px;
+        padding-bottom: 30px;
+        width: 97%;
+        margin-right: 14px;
     }
 
     .Img-populaire {
-        width: 65px;
+        width: 92px;
     }
 
     .card-container {
@@ -863,8 +900,27 @@ h1 {
     .populaire-jaune .card-populaire .card-container .star-populaire-blanc {
         display: flex;
         flex-direction: row;
-        margin-top: 8px;
+        margin-top: 4px;
     }
+
+    .populaire-jaune .card-populaire .card-container .star-populaire {
+        display: flex;
+        flex-direction: row;
+        /* margin: 18px 18px 0px 2px;*/
+    }
+
+    .populaire-jaune .card-populaire .card-container .star-populaire-eau {
+        display: flex;
+        flex-direction: row;
+        /* margin: 0px 18px 0px 2px;*/
+        margin-top: 4px;
+    }
+
+    /*.populaire-jaune .card-populaire .card-container .star-populaire-blanc {
+        display: flex;
+        flex-direction: row;
+        margin: 26px 18px 0px 2px;
+    }*/
 
     /*.star-populaire {
         margin-top: 35px;
@@ -888,7 +944,6 @@ h1 {
 
     #next a {
         margin-left: 20px;
-
     }
 }
 
@@ -915,6 +970,10 @@ h1 {
         margin-bottom: 5px;
     }
 
+    h1 {
+        margin-top: 22px;
+    }
+
     .fa-circle-info {
         margin-top: 5px;
     }
@@ -923,11 +982,12 @@ h1 {
         display: none;
     }
 
-    .titre-activites {
+    .activite .titre-activites {
         padding-right: 160px;
-        margin-left: 34px;
+        margin-left: 15px;
         margin-top: 28px;
         width: 210px;
+        margin-bottom: 1px;
     }
 
     .card-container {
@@ -935,30 +995,39 @@ h1 {
         margin-left: 0px;
     }
 
-    .groupe-lien {
+    .main a {
+        width: 100%;
+    }
+
+    /* .groupe-lien {
         width: 100%;
         margin-bottom: 10px;
         gap: 14px;
-    }
+    }*/
 
-    .lien {
+    /*.lien {
         width: 100%;
         font-size: 11px;
         line-height: 13px;
         width: 43%;
         justify-content: start;
         padding-left: 10px;
-    }
+    }*/
 
     .liens-container {
-        width: auto;
+        gap: 20px;
+        margin-left: 10px;
+    }
+
+    .lien4 {
+        gap: 15px;
     }
 
     nav {
         flex-direction: column;
-        justify-content: space-around;
+        /* justify-content: space-around;
         width: 100%;
-        gap: 28px;
+        gap: 28px;*/
     }
 
     #header {
@@ -970,19 +1039,27 @@ h1 {
     }
 
     .menu {
-        gap: 91px;
+        gap: 60px;
     }
 
-        .menu a:hover {
-            border-top: none;
-            border-bottom: 2px solid #0065FC;
+        .menu a {
+            text-decoration: none;
+            color: black;
+            padding-bottom: 20px;
+            width: 120px;
         }
 
-    .form {
+            .menu a:hover {
+                border-top: none;
+                border-bottom: 2px solid #0065FC;
+                padding-bottom: 18px;
+            }
+
+    /*  .form {
         width: 100%;
         justify-content: space-between;
         padding-left: 10px;
-    }
+    }*/
 
     .rechercher {
         align-items: center;
@@ -1011,7 +1088,7 @@ h1 {
         gap: 20px;
     }
 
-    .fa-sharp.fa-solid.fa-dog.fa-lg {
+    /* .fa-sharp.fa-solid.fa-dog.fa-lg {
         margin-right: 8px;
     }
 
@@ -1029,7 +1106,7 @@ h1 {
 
     .lien-dog {
         padding-left: 10px;
-    }
+    }*/
 
     #lien-filtre {
         justify-content: start;
@@ -1044,9 +1121,9 @@ h1 {
         margin-bottom: 20px;
     }
 
-    .titre {
+    /* .titre {
         margin-left: 2px;
-    }
+    }*/
 
     .hebergement-vert {
         flex-direction: column-reverse;
@@ -1063,6 +1140,7 @@ h1 {
         width: 100%;
         margin-top: 25px;
         height: auto;
+        padding-bottom: 0px;
     }
 
     .hebergement-rouge {
@@ -1093,22 +1171,23 @@ h1 {
         width: 110px;
     }
 
-    .card-populaire {
-        width: 100%;
+    .card-populaire, card-populaire-eau, card-populaire-bleu {
+        width: 95%;
+        margin-left: 15px;
     }
 
-    .card-populaire-eau {
+    /* .card-populaire-eau {
         width: 100%;
-    }
+    }*/
 
-    .card-populaire-bleu {
+    /* .card-populaire-bleu {
         width: 100%;
-    }
+    }*/
 
-    .activite {
+    /* .activite {
         justify-content: center;
         align-items: center;
-    }
+    }*/
 
     .images-activite {
         flex-direction: column;
@@ -1117,8 +1196,12 @@ h1 {
 
     .card-activite {
         width: 100%;
+        height: 194px;
     }
 
+    .activite .images-activite .card-activite .nom {
+        margin: 10px 0px 5px 12px;
+    }
 
     .images-activite .card-activite img {
         object-fit: cover;
@@ -1127,9 +1210,9 @@ h1 {
         width: 95%;
     }
 
-    .star-populaire-blanc {
+    /* .star-populaire-blanc {
         margin-top: 52px;
-    }
+    }*/
 
     footer {
         flex-direction: column;
