width:30% pour le mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -866,20 +866,20 @@ i.fa-solid.fa-info.fa-blue {
     }
 
     .lien1 {
-        width: auto;
+        width: 30%;
     }
 
     .lien2 {
-        width: auto;
+        width: 30%;
     }
 
     .lien3 {
-        width: auto;
+        width: 30%;
         ;
     }
 
     .lien4 {
-        width: auto;
+        width: 30%;
         ;
     }
 
